https://github.com/nosota/mWallet/issues/14